# NDKSample

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yscall/ndksample/: JNIUtils.java  MainActivity.java
app/src/main/jni/: NDKHello.cpp  com_yscall_ndksample_JNIUtils.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
